--- a/config.json
+++ b/config.json
@@ -2,14 +2,14 @@
     "dbConnection":{
         "address":"192.168.56.101",
         "port":"3306",
-        "name":"ADUd4",
+        "name":"hibernate",
         "user":"userhibernate",
         "password":"abc123."    
     },
     "hibernate":{
         "driver":"com.mysql.cj.jdbc.Driver",
         "dialect":"org.hibernate.dialect.MySQL5Dialect",
-        "HBM2DDL_AUTO":"validate",
+        "HBM2DDL_AUTO":"update",
         "SHOW_SQL": true
     }
 }
